fixed shortcuts position on small.css

--- a/src/style/small.css
+++ b/src/style/small.css
@@ -52,6 +52,8 @@ h3{
 
 #shortcuts{
     margin: 0.2em 0 0.2em 0;
+    min-width: 100%;
+    text-align: center;
 }
 
 .menu li {
